fix: Upgrade Hibernate to version 6.6 and delete useless Dependent class - Meeds-io/meeds#3365 (#1119)
This change will remove usage of `com.mchange.io.FileUtils` class and
will upgrade `closer-compiler` jar used to minify static resources.
In addition, this will make necessary adaptations to upgrade Hibernate to 6.6 version.